<resources>
    <string name="app_name">World Wonders</string>
    <string name="title_activity_register">Register</string>

    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="login_access">Login</string>

    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_confirmation">Password Confirmation</string>
    <string name="country">Country</string>
    <string name="languages">Language</string>
    <string name="gender">Gender</string>
    <string name="receive_notifications">Receive Notifications</string>
    <string name="send">Send</string>

    <string name="message_name">Name is required</string>
    <string name="message_email">Email is required</string>
    <string name="message_password">Define a password</string>
    <string name="message_password_confirmation">Passwords not match</string>
    <string name="message_language">Define a language</string>
    <string name="message_success">User Registered!</string>

    <string name="hello_world">Hello world!</string>
    <string name="settings">Settings</string>
    <string name="rate">Rate</string>
    <string name="logout">Logout</string>
    <string name="refresh">Refresh</string>
    <string name="radio_button_male">Male</string>
    <string name="radio_button_female">Female</string>

    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>

    <string name="message_sync_title">Sync</string>
    <string name="message_sync_message">Proceed with wonders sync?</string>

    <string name="not_wonders_sync_ticker">Wonders loaded: </string>
    <string name="not_wonders_sync_title">Wonders loaded successfully!</string>
    <string name="not_wonders_sync_text">Wonders loaded</string>



    <string-array name="spinner_items">
        <item>Brazil</item>
        <item>Canada</item>
        <item>French</item>
    </string-array>

    <string-array name="languages_brazil_items">
        <item>Portuguese</item>
    </string-array>

    <string-array name="languages_canada_items">
        <item>English</item>
        <item>French</item>
    </string-array>

    <string-array name="languages_french_items">
        <item>French</item>
    </string-array>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_wonder_details">WonderDetailsActivity</string>
    <string name="action_settings">Settings</string>

</resources>
