<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <ImageView
            android:layout_width="@dimen/login_horizontal_image"
            android:layout_height="@dimen/login_vertical_image"
            android:scaleType="fitXY"
            android:src="@drawable/img_world_wonders"
            android:layout_gravity="center"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/login"
            android:id="@+id/textView"
            android:layout_marginTop="10dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/txtLogin"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/textView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/password"
            android:id="@+id/textView2"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/txtLogin"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/txtSenha"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/textView2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:inputType="numberPassword" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" android:layout_alignParentBottom="true" android:padding="10dp">

        <Button
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:text="@string/sign_up"
            android:id="@+id/btnSign"
            android:layout_above="@+id/btnLogin"
            android:layout_toEndOf="@+id/textView2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_weight="1"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:text="@string/login_access"
            android:id="@+id/btnLogin"
            android:layout_gravity="center_horizontal"
            android:layout_centerHorizontal="true"
            android:layout_weight="1"/>

    </LinearLayout>

</RelativeLayout>
